# agora-ent-scenarios

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile_bitbucket.groovy  README.md
.github/hooks/: pre-commit
.github/workflows/: gitee-sync.yml
Android/: .gitignore  CHANGELOG.md  README.md  TaskList.md  build.gradle  config.gradle  git-hooks.gradle  gradle.properties  modular.gradle  settings.gradle  versionCtrl.properties
Android/IMKitManager/: README.md  build.gradle
Android/RTMSyncManager/: build.gradle
Android/app/: build.gradle  lint-baseline.xml
Android/scenes/: modular.gradle
Android/scenes/show/src/main/cpp/: CMakeLists.txt  gen-android.sh  video_premium_model_jni.cpp  video_premium_model_jni.h
iOS/: AGResourceManager.podspec  AgoraCommon.podspec  AgoraHy.podspec  AgoraRtcEngine_iOS.podspec  AgoraRtm.podspec  AgoraTranscriptSubtitle.podspec  Cantata.podspec  ExportOptions.plist  ExportOptions_app-store.plist  ExportOptions_development.plist  FURender.podspec  FURenderKit.podspec  Podfile  README.md  Test_metaSDK.podspec  bytedEffect.podspec  fu.podspec  sdk.podspec  sense.podspec  test.order
iOS/AgoraEntScenarios/: AgoraCommon.podspec  AgoraEntScenarios-Bridging-Header.h  AppDelegate.swift  Info.plist  KeyCenter.swift  KeyCenter.swift.bak  PrivacyInfo.xcprivacy  ViewController.swift
iOS/AgoraEntScenarios.xcodeproj/: project.pbxproj
iOS/AgoraEntScenariosTests/: AgoraEntScenariosTests.swift
iOS/AgoraEntScenariosUITests/: AgoraEntScenariosUITests.swift  AgoraEntScenariosUITestsLaunchTests.swift
iOS/Cantata/: Cantata.h
(+5879 files in other folders)
